fixed dynamic height resizing so it doesn't break the adjustable playlist widths

--- a/app/assets/stylesheets/client.css.sass
+++ b/app/assets/stylesheets/client.css.sass
@@ -270,6 +270,7 @@ $table-header-font-size: 14pt
       width: 25%
 #playlist_header
   background-color: rgb(220, 220, 220)
+  height: 25px
 #playlist
   +vertical-scroll
   margin-bottom: 10px
